kubernetes/manifests/08-network-policies/allow-services-from-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-services-from-ui
  namespace: retail
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - catalog
          - cart
          - checkout
          - orders
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ui
      ports:
        - protocol: TCP
          port: 8080
