kubernetes/manifests/08-network-policies/allow-ui-from-alb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-from-alb
  namespace: retail
spec:
  podSelector:
    matchLabels:
      app: ui
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
